--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "Glauber Brack",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:staged": "jest"
   },
   "keywords": [],
   "license": "ISC",
