--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Glauber Brack",
   "main": "index.js",
   "scripts": {
-    "test": "jest --passWithNoTestss",
+    "test": "jest --passWithNoTests --watch",
     "test:staged": "jest --passWithNoTests"
   },
   "keywords": [],
